Working on move forwarding to other players

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -13,7 +13,7 @@
             <i id="welcome_name_spinner" class="fa fa-refresh fa-spin hidden"></i>
         </div>
 
-        <div id="connect_container">
+        <div id="games_container">
             <div id="games_list"></div>
 
             <fieldset id="create_game">
