Fixed some bugs

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -26,7 +26,7 @@
                 <li>Move a piece to an adjacent space</li>
                 <li>Launch one or more gliders</li>
             </ol>
-            <button id="control_end_turn">Finish Turn</button>
+            <div id="control_end_turn" class="button">Finish Turn</div>
         </div>
     </div>
 
