--- a/src/public/index.html
+++ b/src/public/index.html
@@ -26,6 +26,10 @@
                 <li>Move a piece to an adjacent space</li>
                 <li>Launch one or more gliders</li>
             </ol>
+
+            <div class="move_list">
+            </div>
+
             <div id="control_end_turn" class="button">Finish Turn</div>
         </div>
     </div>
